--- a/pom.xml
+++ b/pom.xml
@@ -12,7 +12,7 @@
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     </properties>
-  
+
     <build>
         <plugins>
             <plugin>
@@ -25,9 +25,19 @@
                     <target>1.7</target>
                 </configuration>
             </plugin>
+
+            <plugin>
+                <groupId>org.codehaus.mojo</groupId>
+                <artifactId>exec-maven-plugin</artifactId>
+                <version>1.3.2</version>
+                <configuration>
+                    <mainClass>hipster.examples.maze.Server</mainClass>
+                </configuration>
+            </plugin>
+
         </plugins>
     </build>
-  
+
     <repositories>
         <repository>
             <id>sonatype-oss-public</id>
@@ -74,7 +84,8 @@
             <version>2.2.4</version>
         </dependency>
 
+
     </dependencies>
-  
-  
+
+
 </project>
