--- a/pom.xml
+++ b/pom.xml
@@ -74,10 +74,10 @@
             <scope>test</scope>
         </dependency>
         <dependency>
-            <groupId>es.usc.citius.hipster</groupId>
-            <artifactId>hipster-all</artifactId>
-            <version>1.0.0-SNAPSHOT</version>
-        </dependency>
+             <groupId>es.usc.citius.hipster</groupId>
+             <artifactId>hipster-all</artifactId>
+             <version>1.0.0</version>
+         </dependency>
         <dependency>
             <groupId>com.google.code.gson</groupId>
             <artifactId>gson</artifactId>
